--- a/wt_3/style.css
+++ b/wt_3/style.css
@@ -27,16 +27,15 @@ body{
     /* padding: 14px 0 0 230px; */
     padding-block: 15px;
     z-index: 5;
+    font-size: small;
     /* padding-inline-start: 20px; */
 }
 .two span{
-    display: inline-flex;
-    /* margin: 0 15px; */
-    padding-inline: 10px;
-    position: sticky;
+    /* padding-inline: 10px; */
+    margin: 0 1.5%;
 }
 #ab{
-    width: 390px;
+    width: 200px;
 }
 #ab:focus{
     outline: none;
@@ -49,8 +48,8 @@ body{
     background-position: center;
     /* height: 300px;
     max-height: 600px; */
-    padding-inline: 70px;
-    padding-block: 70px;
+    padding-inline: 6%;
+    padding-block: 6%;
     color: white;
     font-size: larger;
 }
@@ -101,10 +100,15 @@ body{
 .foot .art{
     margin: auto;
     border: 1px solid black;
+    /* width: 85%;
+    height: 75%; */
 }
 .foot{
     display: inline-block;
-    padding: 5%;
+    padding: 2%;
+    /* width: 100%;
+    height: 100vh; */
+    overflow: hidden;
     background: linear-gradient(to left, #000000, #434343);
 }
 .ish{
@@ -112,31 +116,37 @@ body{
     color: white;
     text-align: left;
     font-weight: 700;
+    
 }
 .ish > p{
-    margin: 25px;
+    margin: 6%;
+    width: 50%;
 }
 .ish > h1{
-    margin-left: 25px;
+    margin-left: 6%;
 }
 .art{
     position: relative;
     display: flex;
     background: linear-gradient(to right, #000000, #e74c3c);
     color: whitesmoke;
+    justify-content: space-between;
 }
 .logo > img{
-    width: 250px;
+    width: 20%;
+    height: 23%;
     border-radius: 50%;
     position: absolute;
     right: 10%;
     top: 20%;
     box-shadow: 9px 9px 9px 9px rgba(255,255,255,0.399);
-    height: 250px;
+    /* height: 25%; */
+
 }
 .logo > img:hover{
     right: 19%;
     top: 29%;
-    width: 40%;
+    width: 25%;
+    height: 29%;
 }
 
