--- a/shoepage/style.css
+++ b/shoepage/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;`        
 }
 body{
     background-color: lightgrey;
@@ -18,7 +18,6 @@ body{
     transform: skewY(10deg);
     background: linear-gradient(to right, #b92b27, #1565c0);
     box-shadow: 0px 0px 10px black ;
-    overflow: hidden;
 }
 .shoe{
     padding: 2% 2%; 
