--- a/youtubeclone/style.css
+++ b/youtubeclone/style.css
@@ -6,7 +6,10 @@
 #yt-icon{
     color: black;
     box-shadow: 0px 0px 5px black  0.2;
-    border-radius: 90px;
+    border-radius: 50px;
+    margin-left: 19px;
+    height: 30px;
+    width: 30px;
 }
 body{
     background-color: black;
@@ -63,6 +66,11 @@ input{
     border-radius: 50px;
     margin-left: 10px;
 }
+.header_icons{
+    display: flex;
+    width: 250px;
+    justify-content: space-around;
+}
 .sidebar{
     position: sticky;
     top: 80px;
@@ -105,13 +113,13 @@ input{
 }
 .video{
     color: white;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     width: 300px;
 }
 .video-thumbnail img{
     border-radius: 10px;
-    width: 100%;
-    height: 150px;
+    width: 110%;
+    height: 160px;
 }
 .author img{
     border-radius: 50px;
@@ -140,5 +148,4 @@ h3{
     font-size: 16px;
     font-weight: bold;
     font-family: sans-serif, 'Times New Roman', Times, serif;
-    /* font-style: ; */
 }
