--- a/wt_4/style.css
+++ b/wt_4/style.css
@@ -36,11 +36,9 @@ body{
 .head{
     text-decoration: none;
     color: white;
-    /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); */
 }
 .head:hover{
     color: #ddd;
-    /* background-color: rgba(255,255,255,0.3); */
 }
 .sec1{
     height: 100%;
@@ -95,7 +93,7 @@ html{
     background: #fff;
     border: 2px solid #fff;
     transition: 0.4s ease;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); */
     text-decoration: none;
 }
 .inner > a:hover{
@@ -255,10 +253,12 @@ img{
     width: 400px;
     padding-left: 10px;
     font-size: 16px;
+    border: 2px solid rgba(125,125,125,0.2);
 }
 .right > textarea{
     padding-left: 10px;
     font-size: 18px;
+    border: 2px solid rgba(125,125,125,0.2);
 }
 .right > button{
     width: 170px;
@@ -269,6 +269,7 @@ img{
     outline-style: none;
     font-size: 16px;
     font-weight: bold;
+    border: 2px solid white;
 }
 .right > button:hover{
     cursor: pointer;
@@ -287,4 +288,10 @@ img{
 .materials-icons{
     color: gray;
     background-color: #333;
+}
+input:focus{
+    outline: none;
+}
+textarea:focus{
+    outline: none;
 }
