major_project modi.

--- a/major_project/style.css
+++ b/major_project/style.css
@@ -3,7 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+html{
+  scroll-behavior: smooth;
+}
 h1,
 h2,
 h3,
@@ -77,7 +79,7 @@ nav ul .icon:hover a{
   .home {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),
       url("./assets/header-background.jpg");
-    min-height: 100vh;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     display: flex;
@@ -648,31 +650,30 @@ footer a{
 footer>div:nth-child(1){
   width: 50%;
 }
-
+@media screen and (min-width: 426px){
+  nav ul{
+    display: visible;
+  }
+  nav .menu{
+    display: none;
+  }
+}
 @media only screen and (max-width: 425px){
  
-  body{
-    padding-left: 3rem;
-  }
 
-  nav{
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(2,1fr); */
-    padding: 0.3rem 1rem;
-    max-width: 425px;
-    width: 100%;
+  .home{
+    padding-block: 5rem;
+    min-height: 100vw;
+    min-width: 155vw;
   }
   nav img{
     width: 3rem;
   }
   nav ul{
-    /* display: grid; */
-    grid-template-columns: repeat(3,1fr);
-    font-size: 0.57rem;
-    justify-content: center;
-    align-items: center;
-    gap: 0.55rem;
+    display: none;
+  }
+  nav .menu{
+    color: #2a5d77;
   }
   .home h1{
     padding-top: 2rem;
@@ -736,3 +737,13 @@ footer>div:nth-child(1){
     margin-bottom: 10px;
   }
 }
+@media screen and (width <= 425px){
+  nav .ul{
+    content: hidden;
+  }
+}
+/* @media only screen and (width <= 375px) and  (width >= 320px) {
+  .nav{
+    height: ;
+  }
+} */
